--- a/HyuJokbo/HyuJokbo/JokboTabStoryboard.storyboard
+++ b/HyuJokbo/HyuJokbo/JokboTabStoryboard.storyboard
@@ -341,13 +341,13 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cR4-a4-wec">
-                                            <rect key="frame" x="13" y="418" width="295" height="27.5"/>
+                                            <rect key="frame" x="13" y="428" width="295" height="17"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tIy-lJ-Mvo">
-                                            <rect key="frame" x="267" y="479.5" width="14" height="12"/>
+                                            <rect key="frame" x="267" y="479" width="14" height="12"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="12" id="rDv-Od-z9R"/>
                                                 <constraint firstAttribute="width" constant="14" id="uXC-Dg-zxZ"/>
@@ -358,7 +358,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g28-Uf-BVs">
-                                            <rect key="frame" x="268" y="462.5" width="12" height="12"/>
+                                            <rect key="frame" x="268" y="462" width="12" height="12"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="12" id="a8i-OE-KEz"/>
                                                 <constraint firstAttribute="width" constant="12" id="sRi-Ga-TOD"/>
@@ -369,7 +369,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kjd-Ig-BJ1">
-                                            <rect key="frame" x="13" y="477.5" width="16" height="16"/>
+                                            <rect key="frame" x="13" y="477" width="16" height="16"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="16" id="WJX-eM-l4N"/>
                                                 <constraint firstAttribute="width" constant="16" id="sA0-U0-621"/>
@@ -380,7 +380,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uq2-ie-tRr">
-                                            <rect key="frame" x="281" y="462.5" width="31" height="12"/>
+                                            <rect key="frame" x="281" y="462" width="31" height="12"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="12" id="4a9-k2-xpt"/>
                                                 <constraint firstAttribute="width" constant="31" id="knz-9u-B4d"/>
@@ -394,7 +394,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uOM-k4-WKm">
-                                            <rect key="frame" x="281" y="479.5" width="31" height="12"/>
+                                            <rect key="frame" x="281" y="479" width="31" height="12"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="12" id="CGb-3Z-xuR"/>
                                                 <constraint firstAttribute="width" constant="31" id="Srv-xj-hRQ"/>
@@ -408,7 +408,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zg9-lE-doa">
-                                            <rect key="frame" x="30" y="479.5" width="20" height="12"/>
+                                            <rect key="frame" x="30" y="479" width="20" height="12"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="12" id="Uw8-rZ-wiW"/>
                                                 <constraint firstAttribute="width" constant="20" id="dBU-UK-mDe"/>
@@ -449,14 +449,14 @@
                                         <constraint firstItem="kjd-Ig-BJ1" firstAttribute="leading" secondItem="r4s-IE-yjL" secondAttribute="leadingMargin" constant="5" id="2tN-Yt-MHN"/>
                                         <constraint firstItem="cR4-a4-wec" firstAttribute="leading" secondItem="r4s-IE-yjL" secondAttribute="leadingMargin" constant="5" id="8r0-Nd-viw"/>
                                         <constraint firstItem="uOM-k4-WKm" firstAttribute="leading" secondItem="uq2-ie-tRr" secondAttribute="leading" id="EVv-qW-ULg"/>
-                                        <constraint firstItem="cR4-a4-wec" firstAttribute="top" secondItem="kDF-P6-HUM" secondAttribute="bottom" id="GV9-No-2xq"/>
+                                        <constraint firstItem="cR4-a4-wec" firstAttribute="top" secondItem="kDF-P6-HUM" secondAttribute="bottom" constant="10" id="GV9-No-2xq"/>
                                         <constraint firstItem="g28-Uf-BVs" firstAttribute="top" secondItem="cR4-a4-wec" secondAttribute="bottom" constant="17" id="IUi-2u-oOG"/>
                                         <constraint firstAttribute="bottomMargin" secondItem="tIy-lJ-Mvo" secondAttribute="bottom" id="LKL-Xq-uwp"/>
                                         <constraint firstItem="uq2-ie-tRr" firstAttribute="centerY" secondItem="g28-Uf-BVs" secondAttribute="centerY" id="NFT-pB-B1K"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="uq2-ie-tRr" secondAttribute="trailing" id="Nog-PA-2PS"/>
                                         <constraint firstItem="Zg9-lE-doa" firstAttribute="leading" secondItem="kjd-Ig-BJ1" secondAttribute="trailing" constant="1" id="PGV-ns-NO9"/>
                                         <constraint firstItem="uq2-ie-tRr" firstAttribute="leading" secondItem="g28-Uf-BVs" secondAttribute="trailing" constant="1" id="SNk-is-epe"/>
-                                        <constraint firstItem="cR4-a4-wec" firstAttribute="top" secondItem="MQR-ay-0uQ" secondAttribute="bottom" constant="300" id="V7P-rn-21F"/>
+                                        <constraint firstItem="cR4-a4-wec" firstAttribute="top" secondItem="MQR-ay-0uQ" secondAttribute="bottom" constant="310" id="V7P-rn-21F"/>
                                         <constraint firstItem="kjd-Ig-BJ1" firstAttribute="centerY" secondItem="tIy-lJ-Mvo" secondAttribute="centerY" id="Z3L-vb-p5G"/>
                                         <constraint firstItem="cR4-a4-wec" firstAttribute="centerX" secondItem="r4s-IE-yjL" secondAttribute="centerX" id="eqT-Oe-aou"/>
                                         <constraint firstItem="tIy-lJ-Mvo" firstAttribute="top" secondItem="g28-Uf-BVs" secondAttribute="bottom" constant="5" id="gPi-pP-0UQ"/>
